moved a gemini model to backendApi